# tidewatch

./: .coverage  .gitignore  .pre-commit-config.yaml  .repomix-instruction.md  .repomixignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  COMMERCIAL.md  CONTRIBUTING.md  DECISIONS.md  GENERIC_FIRST_REMEDIATION.md  IMPLEMENTATION.md  LICENSE  NEXT_SESSION.md  README.md  REDTEAM.md  TIDEWATCH-BOOTSTRAP.md  pyproject.toml  repomix-output.xml  repomix.config.json
.claude/: settings.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  remediation-gates.yml
.hypothesis/constants/: 06ba1639d9fa6b1e  084cc06c26d775a9  09c8f15c5cd188be  0a6a3fad42a2be1a  0df0b853a9ae440e  0e63670f7d36111a  0f2a7baa07027f68  13736274916f305a  1bd1d0e125082f99  2419592c5fffb929  27847bbfdcb1f975  2f8bd488b052dd92  331439f1c4245cc9  33f826b5f61cb81e  370e75841bf0139c  37d09d1108151957  3a80a3314e8b4a56  3ce28bac7dcbf12f  490086780648afd8  4bf4d573fac7ef46  4d777ef7d2f10953  522809f5e57e946f  53b1cc70723db915  580919b02405db64  5a85cda3df9553a0  60a3902590d36cc5  62cb2a3ef6c54e9a  656168efbaecd9ee  65b21d8c6da5d983  68babe12ad7e50ed  693942edcc014f99  704a9571a10729b9  76910fd3a0c2c392  7d89f47ffda6bbb8  7d8e385890a11870  7dc854017292ae63  8331b12c035d626c  8432795fc9c6547d  90353046f82954b0  9167b1738b3289e7  (+27 more)
.hypothesis/examples/04e6b3400353b141/: 33f1cec5cba0e6e1  608861fe74ad05c1  af0742270de1b55d
.hypothesis/examples/608861fe74ad05c1/: 351f1698fa5782af
analyses/: -2026-03-20.yaml  tidewatch-2026-03-19.yaml  tidewatch-2026-03-20.yaml  tidewatch-2026-03-21.yaml  tidewatch-2026-03-22.yaml
benchmarks/: __init__.py  ablation_results.json  constants.py  metrics.py  monte_carlo.py  monte_carlo_results.json  monte_carlo_results_full.json  monte_carlo_results_n200.json  monte_carlo_results_n50_with_ci.json  run.py
benchmarks/baselines/: __init__.py  binary_deadline.py  eisenhower.py  linear_urgency.py
benchmarks/datasets/: generate_obligations.py
docs/: LAUNCH_POSTS_DRAFT.md  demo.cast
examples/: api_server.py  jira_integration.py  quickstart.py  sample_payload.json
gates/: __init__.py  registry.yaml  runner.py
ingest/: TIDEWATCH_PUBLISH_PREP.md
paper/: abstract_optimal_v1.md  abstract_optimal_v2.md  analysis_a.md  analysis_b.md  analysis_c.md  analysis_d.md  references.bib  tidewatch.aux  tidewatch.bbl  tidewatch.blg  tidewatch.fdb_latexmk  tidewatch.fls  tidewatch.out  tidewatch.tex
results/: pressure_isolation_validation.json
results/blackbox_repo_matrix/: blackbox_matrix_coverage.json
scripts/: add_gate.py  check_worktree_hygiene.py  constants.py  demo.py  generate_ablation_results.py  generate_mc_results.py  generate_paper_figures.py  golden_pipeline.sh  publish.sh  validate_pressure_isolation.py
tests/: __init__.py  conftest.py  test_axioms.py  test_baselines.py  test_benchmarks.py  test_binary_deadline.py  test_cognitive_bandwidth.py  test_constants.py  test_coverage_gaps.py  test_eisenhower.py  test_generate_mc_results.py  test_generate_obligations.py  test_generate_paper_figures.py  test_golden_pipeline.py  test_init.py  test_integration.py  test_large_n_scaling.py  test_layer1_impure.py  test_linear_urgency.py  test_metrics.py  test_monte_carlo.py  test_planner.py  test_pressure.py  test_property_pressure.py  test_rank_dampener.py  test_run.py  test_triage.py  test_types.py  test_wearable_spec.py
tidewatch/: __init__.py  components.py  constants.py  planner.py  pressure.py  triage.py  types.py  wearable_spec.py
