[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tidewatch"
version = "0.1.0"
description = "Continuous obligation pressure with proactive idle-time planning"
readme = "README.md"
license = "Apache-2.0 OR LicenseRef-Commercial"
requires-python = ">=3.11"
authors = [
    {name = "Justin Ram", email = "justin.ram@gmail.com"},
]
keywords = [
    "task management", "deadline", "urgency", "pressure",
    "proactive planning", "AI agents", "obligation tracking",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
]
benchmarks = [
    "matplotlib>=3.7",
    "pandas>=2.0",
    "numpy>=1.24",
]

[tool.setuptools.packages.find]
include = ["tidewatch*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]
