[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tidewatch"
version = "0.1.0"
description = "Continuous obligation pressure with proactive idle-time planning"
readme = "README.md"
license = "Apache-2.0 OR LicenseRef-Commercial"
requires-python = ">=3.11"
authors = [
    {name = "Justin Ram", email = "justin.ram@gmail.com"},
]
keywords = [
    "task management", "deadline", "urgency", "pressure",
    "proactive planning", "AI agents", "obligation tracking",
]
dependencies = [
    "gravitas",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "hypothesis>=6.0",
]
benchmarks = [
    "matplotlib>=3.7",
    "pandas>=2.0",
    "numpy>=1.24",
    "simpy>=4.0",
]
telemetry = [
    "sentinel-sdk",
]

[tool.setuptools.packages.find]
include = ["tidewatch*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "numerical_verification: tests that verify numerical/statistical properties (not exact values)",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]
