[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tidewatch"
version = "0.4.4"
description = "Multi-factor obligation pressure scoring for agent orchestration systems"
readme = "README.md"
license = "Apache-2.0 OR LicenseRef-Commercial"
requires-python = ">=3.11"
authors = [
    {name = "S.N. Justin Ram", email = "justin@infoil.io"},
]
keywords = [
    "task prioritization", "deadline", "urgency", "pressure",
    "agent orchestration", "AI agents", "obligation tracking",
    "deferred scalarization",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/ninjra/tidewatch"
Repository = "https://github.com/ninjra/tidewatch"
Issues = "https://github.com/ninjra/tidewatch/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "hypothesis>=6.0",
]
benchmarks = [
    "matplotlib>=3.7",
    "pandas>=2.0",
    "numpy>=1.24",
    "simpy>=4.0",
]

[tool.setuptools.packages.find]
include = ["tidewatch*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "numerical_verification: tests that verify numerical/statistical properties (not exact values)",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]
